Site made Responsive

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Pamela Glickman Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -25,10 +27,10 @@
     </header>
     <main>
 
-        <div>
+        <div class="info">
           <h2>Contact Details</h2>
 
-          <p>Feel free to get in touch via email if you have any questions about my work.</p>
+          <p>Feel free to get in touch via email if you have any questions.</p>
 
           <p><strong>Email: </strong> pamela.e.glickman@gmail.com</p>
           <p><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/">www.linkedin.com/in/pamela-e-glickman/</a></p>
