--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Pamela Glickman Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -24,8 +26,7 @@
       </nav>
     </header>
     <main>
-
-        <div>
+        <div class="info">
           <h2>About Me</h2>
           <p>I’m a mostly self-taught, aspiring Web Developer, who’s passionately seeking an opportunity to put my natural gifts for coding and problem-solving to work. I’m adept at picking up new programming languages and expanding my knowledge of HTML, CSS, JavaScript, jQuery, SQL, Ruby, Python and SQL.</p>
 
