--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Pamela Glickman Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -28,9 +28,11 @@
     <main>
         <div class="info">
           <h2>About Me</h2>
-          <p>I’m a mostly self-taught, aspiring Web Developer, who’s passionately seeking an opportunity to put my natural gifts for coding and problem-solving to work. I’m adept at picking up new programming languages and expanding my knowledge of HTML, CSS, JavaScript, jQuery, SQL, Ruby, Python and SQL.</p>
+          <p>I’m a Junior Web Developer and General Assembly Graduate, who’s passionately seeking an opportunity to put my natural gifts for coding and problem-solving to work. I’m adept at picking up new programming languages and expanding my knowledge of HTML, CSS / SCSS , JavaScript, jQuery, SQL, Ruby, Python, React.js, Node.js and MongoDB.</p>
 
-          <p>I’m intelligent, humble, hard-working and eager to learn. I always strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
+          <p>I’m intelligent, humble, hard-working and eager to learn. I strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
+
+          <p class="resume"><a href="Images/Glickman_Pamela_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a></p>
         </div>
 
         <div>
