--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <title>Pamela Glickman Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -29,28 +29,28 @@
     <main class="projects">
       <div class="grid">
         <div class="flex-container">
-          <!-- This page will eventually include snapshots of the projects -->
+
             <section>
               <h3>Tic-Tac-Toe</h3>
               <img src="Images/tic-tac-toe.png" class="tic-tac-toe">
-              <p>A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the Firebase Realtime Database. The game includes multiplayer networking, enabling users to play over the internet. <a href="peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/">Click Here To Try It Out</a></p>
+              <p>A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the Firebase Realtime Database. The game includes multiplayer networking, enabling users to play over the internet. <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/" target="_blank">Click Here To Try It Out</a></p>
             </section>
             <section>
               <h3>Flight Planner</h3>
               <img src="Images/flight-planner.png" class="planner">
-              <p>A flight booking website that enables users to search for, book and cancel flights. Admins can also create, edit and delete flights. Made using HTML, CSS, Bootstrap, Ruby on Rails and PostgreSQL. <a href="https://flight-planner-app.herokuapp.com/">Click Here To Try It Out</a></p>
+              <p>A flight booking website that enables users to search for, book and cancel flights. Admins can also create, edit and delete flights. Made using HTML, CSS, Bootstrap, Ruby on Rails and PostgreSQL. <a href="https://flight-planner-app.herokuapp.com/" target="_blank">Click Here To Try It Out</a></p>
             </section>
         </div>
         <div class="flex-container">
             <section>
               <h3>Drum Machine</h3>
               <img src="Images/drum-machine.png">
-              <p>A drum machine enabling users to click on buttons or press their corresponding keyboard keys to play sounds. Made using React.js. Pad and key data is supplied via requests to a Ruby on Rails server. <a href="https://plt-drum-9.herokuapp.com/">Click Here To Try It Out</a></p>
+              <p>A drum machine enabling users to click buttons or press their corresponding keyboard keys to play sounds. Made using React.js. Pad and key data is supplied via requests to a Ruby on Rails server. <a href="https://plt-drum-9.herokuapp.com/" target="_blank">Click Here To Try It Out</a></p>
             </section>
             <section>
               <h3>Commercial Planner</h3>
-              <img src="Images/flight-planner.png" class="planner"> <!-- TODO: Replace placeholder image src -->
-              <p>A  website that enables e-commerce businesses to both receive online orders and organise their employee's shifts to meet customer demand. Made using HTML, CSS, Ruby on Rails and PostgreSQL. <a href="https://flight-planner-app.herokuapp.com/">Click Here To Try It Out</a></p> <!-- TODO: Replace placeholder href -->
+              <img src="Images/commercial-planner.png" class="planner"> <!-- TODO: Replace placeholder image src -->
+              <p>A  website that enables e-commerce businesses to both receive online orders and organise their employee's shifts to meet customer demand. Made using HTML, CSS, Ruby on Rails and PostgreSQL. <a href="https://commercial-planner.herokuapp.com/" target="_blank">Click Here To Try It Out</a></p> <!-- TODO: Replace placeholder href -->
             </section>
         </div>
       </div>
