Selected Class Added

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
           <li>
             <a href="projects.html">Projects</a>
           </li>
-          <li>
+          <li class="selected">
             <a href="contact.html">Contact Details</a>
           </li>
         </ul>
@@ -32,7 +32,7 @@
 
           <p>Feel free to get in touch via email if you have any questions.</p>
 
-          <p><strong>Email: </strong> pamela.e.glickman@gmail.com</p>
+          <p><strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a> </p>
           <p><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/">www.linkedin.com/in/pamela-e-glickman/</a></p>
           <p><strong>GitHub: </strong> <a href="https://github.com/PegliOne">https://github.com/PegliOne</a></p>
         </div>
