--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <h1>Pamela Glickman</h1>
         <ul>
-          <li>
+          <li class="selected">
             <a href="index.html">Home</a>
           </li>
           <li>
@@ -28,11 +28,11 @@
     <main>
         <div class="info">
           <h2>About Me</h2>
-          <p>I’m a Junior Web Developer and General Assembly Graduate, who’s passionately seeking an opportunity to put my natural gifts for coding and problem-solving to work. I’m adept at picking up new programming languages and expanding my knowledge of HTML, CSS / SCSS , JavaScript, jQuery, SQL, Ruby, Python, React.js, Node.js and MongoDB.</p>
+          <p>I am a recent General Assembly Software Engineering Graduate and Junior Web Developer, seeking an opportunity to put my talent for technology and coding to work. I’m adept at picking up new programming languages and expanding my knowledge of HTML, CSS / SCSS , JavaScript, jQuery, SQL, Ruby, Python, React.js, Node.js and MongoDB.</p>
 
           <p>I’m intelligent, humble, hard-working and eager to learn. I strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
 
-          <p class="resume"><a href="Images/Glickman_Pamela_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a></p>
+          <p class="resume"><a href="Images/Pamela_Glickman_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a></p>
         </div>
 
         <div>
@@ -47,6 +47,10 @@
         Thank you to Jackson Heystek for hosting this site
       </p>
     </footer>
+
+    <!-- TODOS: Make stylesheet work on mobile -->
+
+    <!-- Check for consistancy with LinkedIn, GitHub and Resume -->
 
   </body>
 </html>
