--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       </p>
     </footer>
 
-    <!-- TODOS: Make stylesheet work on mobile -->
+    <!-- TODOS: Make website look better on mobile -->
 
-    <!-- Check for consistancy with LinkedIn, GitHub and Resume -->
+    <!-- Check for consistancy with GitHub-->
 
   </body>
 </html>
