--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <a href="projects.html">Projects</a>
           </li>
           <li class="selected">
-            <a href="contact.html">Contact Details</a>
+            <a href="contact.html">Contact Me</a>
           </li>
         </ul>
       </nav>
