Slight Styling Changes

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
           <p>Feel free to get in touch via email if you have any questions.</p>
 
           <p><strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a> </p>
-          <p><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/">www.linkedin.com/in/pamela-e-glickman/</a></p>
-          <p><strong>GitHub: </strong> <a href="https://github.com/PegliOne">https://github.com/PegliOne</a></p>
+          <p><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a></p>
+          <p><strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a></p>
         </div>
 
         <div>
