--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </p>
     </footer>
 
-    <!-- TODOS: Make website look better on mobile -->
+    <!-- TODOS: Make website look better on mobile. Specifically fix the large left margin, use CSS Grid for the projects grid -->
 
     <!-- Check for consistancy with GitHub-->
 
