--- a/projects.html
+++ b/projects.html
@@ -33,14 +33,14 @@
 
             <section>
               <h3>Tic-Tac-Toe</h3>
-              <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"><img src="Images/tic-tac-toe.png" class="tic-tac-toe"></a>
+              <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/" target="_blank"><img src="Images/tic-tac-toe.png" class="tic-tac-toe"></a>
               <p>A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the Firebase Realtime Database. The game includes multiplayer networking, enabling users to play over the internet.</p>
               <p class="link"><a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank">Click Here To Try It Out</a></p>
               <p class="link"><a href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game" target="_blank">Click Here To See The GitHub Repo</a></p>
             </section>
             <section>
               <h3>Flight Planner</h3>
-              <a href="https://flight-planner-app.herokuapp.com/"><img src="Images/flight-planner.png" class="planner"></a>
+              <a href="https://flight-planner-app.herokuapp.com/" target="_blank"><img src="Images/flight-planner.png" class="planner"></a>
               <p class="planner">A flight booking website that enables users to search for, book and cancel flights. Admins can also create, edit and delete flights. Made using HTML, CSS, Bootstrap, Ruby on Rails and PostgreSQL.</p>
               <p class="link"><a href="https://flight-planner-app.herokuapp.com/" target="_blank">Click Here To Try It Out</a></p>
               <p class="link"><a href="https://github.com/PegliOne/Project-1-Flight-Planner" target="_blank">Click Here To See The GitHub Repo</a></p>
@@ -49,14 +49,14 @@
         <div class="flex-container">
             <section>
               <h3>Drum Machine</h3>
-              <a href="https://plt-drum-9.herokuapp.com/"><img src="Images/drum-machine.png"></a>
+              <a href="https://plt-drum-9.herokuapp.com/" target="_blank"><img src="Images/drum-machine.png"></a>
               <p>A drum machine enabling users to click buttons or press their corresponding keyboard keys to play sounds. Made using React.js. Pad and key data is supplied via requests to a Ruby on Rails server.</p>
               <p class="link"><a href="https://plt-drum-9.herokuapp.com/" target="_blank">Click Here To Try It Out</a></p>
               <p class="link"><a href="https://github.com/PegliOne/Project-2-Drum-Machine-Server" target="_blank">Click Here To See The GitHub Repo</a></p>
             </section>
             <section>
               <h3>Commercial Planner</h3>
-              <a href="https://commercial-planner.herokuapp.com/"><img src="Images/commercial-planner.png" class="planner"></a>
+              <a href="https://commercial-planner.herokuapp.com/" target="_blank"><img src="Images/commercial-planner.png" class="planner"></a>
               <p class="planner">A  website that enables e-commerce businesses to both receive online orders and organise their employee's shifts to meet customer demand. Made using HTML, CSS, Ruby on Rails and PostgreSQL.</p>
               <p class="link"><a href="https://commercial-planner.herokuapp.com/" target="_blank">Click Here To Try It Out</a></p>
               <p class="link"><a href="https://github.com/PegliOne/Commercial-Planner" target="_blank">Click Here To See The GitHub Repo</a></p>
