Updated portfolio content

--- a/projects.html
+++ b/projects.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pamela Glickman Portfolio</title>
+    <title>Pamela Heystek Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
   </head>
-  <body>
 
+  <body>
     <header>
       <nav>
-        <h1>Pamela Glickman</h1>
+        <h1>Pamela Heystek</h1>
         <ul>
           <li>
             <a href="index.html">Home</a>
@@ -20,17 +20,15 @@
           <li class="selected">
             <a href="projects.html">Projects</a>
           </li>
-          <li>
-            <a href="contact.html">Contact Me</a>
-          </li>
         </ul>
       </nav>
     </header>
+
     <h2 class="main-heading">Projects</h2>
+    
     <main class="projects">
       <div class="grid">
         <div class="flex-container">
-
             <section>
               <h3>Tic-Tac-Toe</h3>
               <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/" target="_blank"><img src="Images/tic-tac-toe.png" class="tic-tac-toe"></a>
@@ -38,35 +36,14 @@
               <p class="link"><a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank">Click Here To Try It Out</a></p>
               <p class="link"><a href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game" target="_blank">Click Here To See The GitHub Repo</a></p>
             </section>
-            <section>
-              <h3>Flight Planner</h3>
-              <a href="https://flight-planner-app.herokuapp.com/" target="_blank"><img src="Images/flight-planner.png" class="planner"></a>
-              <p class="planner">A flight booking website that enables users to search for, book and cancel flights. Admins can also create, edit and delete flights. Made using HTML, CSS, Bootstrap, Ruby on Rails and PostgreSQL.</p>
-              <p class="link"><a href="https://github.com/PegliOne/Project-1-Flight-Planner" target="_blank">Click Here To See The GitHub Repo</a></p>
-            </section>
-        </div>
-        <div class="flex-container">
-            <section>
-              <h3>Drum Machine</h3>
-              <a href="https://plt-drum-9.herokuapp.com/" target="_blank"><img src="Images/drum-machine.png"></a>
-              <p>A drum machine enabling users to click buttons or press their corresponding keyboard keys to play sounds. Made using React.js. Pad and key data is supplied via requests to a Ruby on Rails server.</p>
-              <p class="link"><a href="https://github.com/PegliOne/Project-2-Drum-Machine-Server" target="_blank">Click Here To See The GitHub Repo</a></p>
-            </section>
-            <section>
-              <h3>Commercial Planner</h3>
-              <a href="https://commercial-planner.herokuapp.com/" target="_blank"><img src="Images/commercial-planner.png" class="planner"></a>
-              <p class="planner">A  website that enables e-commerce businesses to both receive online orders and organise their employee's shifts to meet customer demand. Made using HTML, CSS, Ruby on Rails and PostgreSQL.</p>
-              <p class="link"><a href="https://github.com/PegliOne/Commercial-Planner" target="_blank">Click Here To See The GitHub Repo</a></p>
-            </section>
         </div>
       </div>
     </main>
 
     <footer>
-      <p>
-        Thank you to Jackson Heystek for hosting this site
-      </p>
+      <span><strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a> </span>
+      <span><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a></span>
+      <span><strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a></span>
     </footer>
-
   </body>
 </html>
