--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pamela Glickman Portfolio</title>
+    <title>Pamela Heystek Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
     <header>
       <nav>
-        <h1>Pamela Glickman</h1>
+        <h1>Pamela Heystek</h1>
         <ul>
           <li class="selected">
             <a href="index.html">Home</a>
@@ -20,38 +20,33 @@
           <li>
             <a href="projects.html">Projects</a>
           </li>
-          <li>
-            <a href="contact.html">Contact Me</a>
-          </li>
         </ul>
       </nav>
     </header>
     <main>
-        <div class="info">
-          <h2>About Me</h2>
-          <p>I am a recent General Assembly Software Engineering Graduate and Junior Web Developer, seeking an opportunity to put my talent for technology and coding to work. I’m adept at picking up new programming languages and expanding my knowledge of HTML, CSS / SCSS , JavaScript, jQuery, SQL, Ruby, Python, React.js, Node.js and MongoDB.</p>
+      <div class="info">
+        <h2>About</h2>
 
-          <p>I’m intelligent, humble, hard-working and eager to learn. I strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
+        <p>I am a Software Engineer with two years of experience in full-stack web development. I graduated from General Assembly’s Software Engineering Immersive course in 2021 and have two years of experience working with HTML, CSS / SCSS, Tailwind, JavaScript, React.js, TypeScript.js Ruby on Rails and PostgreSQL.</p>
 
-          <p class="resume"><a href="Images/Pamela_Glickman_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a></p>
-        </div>
+        <p>I’m intelligent, humble, hard-working and eager to learn. I always strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
 
-        <div>
-          <img src="Images/coding.jpeg" alt="Binary digits">
-        </div>
+        <p class="resume">
+          <a href="Images/Pamela_Glickman_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a>
+        </p>
+      </div>
 
-
+      <div>
+        <img src="Images/coding.jpeg" alt="Binary digits">
+      </div>
     </main>
 
     <footer>
-      <p>
-        Thank you to Jackson Heystek for hosting this site
-      </p>
+      <span><strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a> </span>
+      <span><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a></span>
+      <span><strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a></span>
     </footer>
 
-    <!-- TODOS: Make website look better on mobile. Specifically fix the large left margin, use CSS Grid for the projects grid -->
-
-    <!-- Check for consistancy with GitHub-->
-
+    <!-- TODOS: Make website look better on mobile. Specifically fix the large left margin, use CSS Grid for the projects grid (?) -->
   </body>
 </html>
