Updated footer, images and resume

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>I’m intelligent, humble, hard-working and eager to learn. I always strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
 
         <p class="resume">
-          <a href="Images/Pamela_Glickman_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a>
+          <a href="Images/Pamela_Heystek_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a>
         </p>
       </div>
 
@@ -42,9 +42,18 @@
     </main>
 
     <footer>
-      <span><strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a> </span>
-      <span><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a></span>
-      <span><strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a></span>
+      <h2>Contact Details</h2>
+      <p>
+        <span>
+          <strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a>
+        </span>
+        <span>
+          <strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a>
+        </span>
+        <span>
+          <strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a>
+        </span>
+      </p>
     </footer>
 
     <!-- TODOS: Make website look better on mobile. Specifically fix the large left margin, use CSS Grid for the projects grid (?) -->
