--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     </header>
 
     <h2 class="main-heading">Projects</h2>
-    
+
     <main class="projects">
       <div class="grid">
         <div class="flex-container">
@@ -41,9 +41,18 @@
     </main>
 
     <footer>
-      <span><strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a> </span>
-      <span><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a></span>
-      <span><strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a></span>
+      <h2>Contact Details</h2>
+      <p>
+        <span>
+          <strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a>
+        </span>
+        <span>
+          <strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a>
+        </span>
+        <span>
+          <strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a>
+        </span>
+      </p>
     </footer>
   </body>
 </html>
