Updated file structure and styles

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pamela Heystek Portfolio</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
   </head>
@@ -15,28 +15,31 @@
         <h1>Pamela Heystek</h1>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li class="selected">
-            <a href="projects.html">Projects</a>
+            <a href="./projects.html">Projects</a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <h2 class="main-heading">Projects</h2>
-
     <main class="projects">
+      <h2 class="main-heading">Projects</h2>
+
       <div class="grid">
-        <div class="flex-container">
-            <section>
-              <h3>Tic-Tac-Toe</h3>
-              <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/" target="_blank"><img src="Images/tic-tac-toe.png" class="tic-tac-toe"></a>
-              <p>A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the Firebase Realtime Database. The game includes multiplayer networking, enabling users to play over the internet.</p>
-              <p class="link"><a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank">Click Here To Try It Out</a></p>
-              <p class="link"><a href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game" target="_blank">Click Here To See The GitHub Repo</a></p>
-            </section>
-        </div>
+        <section>
+          <h3>Tic-Tac-Toe</h3>
+          <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/" target="_blank">
+            <img src="./assets/images/tic-tac-toe.png" class="tic-tac-toe">
+          </a>
+          <p>A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the Firebase Realtime Database. The game includes multiplayer networking, enabling users to play over the internet.</p>
+          <p class="link"><a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank">Click Here To Try It Out</a></p>
+          <p class="link"><a href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game" target="_blank">Click Here To See The GitHub Repo</a></p>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
       </div>
     </main>
 
