--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pamela Heystek Portfolio</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
   </head>
@@ -15,10 +15,10 @@
         <h1>Pamela Heystek</h1>
         <ul>
           <li class="selected">
-            <a href="index.html">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="projects.html">Projects</a>
+            <a href="./projects.html">Projects</a>
           </li>
         </ul>
       </nav>
@@ -32,12 +32,12 @@
         <p>I’m intelligent, humble, hard-working and eager to learn. I always strive to write neat, efficient, readable code. You can rely on me to spot coding errors from a mile away and not lose my cool when things go wrong, as they often do in the tech world, though my partner tells me I have a soft side too.</p>
 
         <p class="resume">
-          <a href="Images/Pamela_Heystek_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a>
+          <a href="./assets/images/Pamela_Heystek_Resume.pdf" target="_blank" download>Click Here to Download my Resume</a>
         </p>
       </div>
 
       <div>
-        <img src="Images/coding.jpeg" alt="Binary digits">
+        <img src="./assets/images/coding.jpeg" alt="Binary digits">
       </div>
     </main>
 
