--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <div class="info">
-        <h2>About</h2>
+        <h2>About Me</h2>
 
         <p>I am a Software Engineer with two years of experience in full-stack web development. I graduated from General Assembly’s Software Engineering Immersive course in 2021 and have two years of experience working with HTML, CSS / SCSS, Tailwind, JavaScript, React.js, TypeScript.js Ruby on Rails and PostgreSQL.</p>
 
@@ -36,9 +36,7 @@
         </p>
       </div>
 
-      <div>
-        <img src="./assets/images/coding.jpeg" alt="Binary digits">
-      </div>
+      <img src="./assets/images/coding.jpeg" alt="Binary digits" class="decorative">
     </main>
 
     <footer>
