--- a/projects.html
+++ b/projects.html
@@ -1,61 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pamela Heystek Portfolio</title>
-    <link rel="stylesheet" href="./assets/stylesheets/styles.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600:800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <nav>
-        <h1>Pamela Heystek</h1>
-        <ul>
-          <li>
-            <a href="./index.html">Home</a>
+      <nav class="navbar">
+        <h1 class="navbar__heading">Pamela Heystek</h1>
+        <ul class="navbar__buttons">
+          <li class="navbar__button">
+            <a href="./index.html" class="navbar__link">Home</a>
           </li>
-          <li class="selected">
-            <a href="./projects.html">Projects</a>
+          <li class="navbar__button navbar__button--selected">
+            <a href="./projects.html" class="navbar__link">Projects</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main class="projects">
-      <h2 class="main-heading">Projects</h2>
+      <h2 class="projects__heading">Projects</h2>
 
-      <div class="grid">
-        <section>
-          <h3>Tic-Tac-Toe</h3>
-          <a href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/" target="_blank">
-            <img src="./assets/images/tic-tac-toe.png" class="tic-tac-toe">
+      <section class="projects__gallery">
+        <div class="projects__project">
+          <h3 class="project__heading">Tic-Tac-Toe</h3>
+          <a class="project__image-container"
+            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
+            target="_blank"
+          >
+            <img class="project__image" src="./assets/images/tic-tac-toe.png" />
           </a>
-          <p>A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the Firebase Realtime Database. The game includes multiplayer networking, enabling users to play over the internet.</p>
-          <p class="link"><a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank">Click Here To Try It Out</a></p>
-          <p class="link"><a href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game" target="_blank">Click Here To See The GitHub Repo</a></p>
-        </section>
-        <section></section>
-        <section></section>
-        <section></section>
+          <p class="project__para">
+            A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the
+            Firebase Realtime Database. The game includes multiplayer
+            networking, enabling users to play over the internet.
+          </p>
+          <p class="project__para project__para--link-container">
+            <a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank"
+              >Click Here To Try It Out</a
+            >
+          </p>
+          <p class="project__para project__para--link-container">
+            <a
+              href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game"
+              target="_blank"
+              >Click Here To See The GitHub Repo</a
+            >
+          </p>
+        </div>
+        <div class="projects__project"></div>
+        <div class="projects__project"></div>
+        <div class="projects__project"></div>
       </div>
     </main>
 
-    <footer>
-      <h2>Contact Details</h2>
-      <p>
-        <span>
-          <strong>Email: </strong> <a href="mailto:pamela.e.glickman@gmail.com" target="_blank">pamela.e.glickman@gmail.com</a>
+    <footer class="footer">
+      <h2 class="footer__heading">Contact Details</h2>
+      <div class="footer__details">
+        <span class="footer__detail">
+          <strong>Email: </strong>
+          <a
+            class="footer__link"
+            href="mailto:pamela.e.glickman@gmail.com"
+            target="_blank"
+            >pamela.e.glickman@gmail.com</a
+          >
         </span>
-        <span>
-          <strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/pamela-e-glickman/" target="_blank">www.linkedin.com/in/pamela-e-glickman/</a>
+        <span class="footer__detail">
+          <strong>LinkedIn: </strong
+          ><a
+            class="footer__link"
+            href="https://www.linkedin.com/in/pamela-e-glickman/"
+            target="_blank"
+            >www.linkedin.com/in/pamela-e-glickman/</a
+          >
         </span>
-        <span>
-          <strong>GitHub: </strong> <a href="https://github.com/PegliOne" target="_blank">https://github.com/PegliOne</a>
+        <span class="footer__detail">
+          <strong>GitHub: </strong>
+          <a
+            class="footer__link"
+            href="https://github.com/PegliOne"
+            target="_blank"
+            >https://github.com/PegliOne</a
+          >
         </span>
-      </p>
+      </div>
     </footer>
   </body>
 </html>
