Adds missing style mixins

--- a/projects.html
+++ b/projects.html
@@ -45,16 +45,22 @@
             networking, enabling users to play over the internet.
           </p>
           <p class="project__para project__para--link-container">
-            <a href="https://pams-tic-tac-toe.firebaseapp.com/" target="_blank"
-              >Click Here To Try It Out</a
+            <a 
+              class="project__link" 
+              href="https://pams-tic-tac-toe.firebaseapp.com/" 
+              target="_blank"
             >
+              Click Here To Try It Out
+            </a>
           </p>
           <p class="project__para project__para--link-container">
-            <a
+            <a 
+              class="project__link"
               href="https://github.com/PegliOne/Project-0-Tic-Tac-Toe-Game"
               target="_blank"
-              >Click Here To See The GitHub Repo</a
             >
+              Click Here To See The GitHub Repo
+            </a>
           </p>
         </div>
         <div class="projects__project"></div>
