Updates title, about and footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body>
     <header>
       <nav class="navbar">
-        <h1 class="navbar__heading">Pamela Heystek</h1>
+        <h1 class="navbar__heading">
+          Pamela Heystek - Junior Software Engineer
+        </h1>
         <ul class="navbar__buttons">
           <li class="navbar__button navbar__button--selected">
             <a class="navbar__link" href="./index.html">Home</a>
@@ -31,11 +33,10 @@
         <h2 class="summary__heading">About Me</h2>
 
         <p class="summary__para">
-          I am a Software Engineer with two years of experience in full-stack
-          web development. I graduated from General Assembly’s Software
-          Engineering Immersive course in 2021 and have two years of experience
-          working with HTML, CSS / SCSS, Tailwind, JavaScript, React.js,
-          TypeScript.js Ruby on Rails and PostgreSQL.
+          I'm a Junior Software Engineer, who graduated from General Assembly’s
+          Software Engineering Immersive course in 2021 and has two years of
+          professional experience having worked for Livewire Markets from May
+          2021 to March 2023.
         </p>
 
         <p class="summary__para">
@@ -71,18 +72,18 @@
           <strong>Email: </strong>
           <a
             class="footer__link"
-            href="mailto:pamela.e.glickman@gmail.com"
+            href="mailto:pamela.e.heystek@gmail.com"
             target="_blank"
-            >pamela.e.glickman@gmail.com</a
+            >pamela.e.heystek@gmail.com</a
           >
         </span>
         <span class="footer__detail">
           <strong>LinkedIn: </strong
           ><a
             class="footer__link"
-            href="https://www.linkedin.com/in/pamela-e-glickman/"
+            href="https://www.linkedin.com/in/pamela-heystek/"
             target="_blank"
-            >www.linkedin.com/in/pamela-e-glickman/</a
+            >www.linkedin.com/in/pamela-heystek/</a
           >
         </span>
         <span class="footer__detail">
