--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <nav class="navbar">
-        <h1 class="navbar__heading">Pamela Heystek</h1>
+        <h1 class="navbar__heading">
+          Pamela Heystek - Junior Software Engineer
+        </h1>
         <ul class="navbar__buttons">
           <li class="navbar__button">
             <a href="./index.html" class="navbar__link">Home</a>
@@ -76,18 +78,18 @@
           <strong>Email: </strong>
           <a
             class="footer__link"
-            href="mailto:pamela.e.glickman@gmail.com"
+            href="mailto:pamela.e.heystek@gmail.com"
             target="_blank"
-            >pamela.e.glickman@gmail.com</a
+            >pamela.e.heystek@gmail.com</a
           >
         </span>
         <span class="footer__detail">
           <strong>LinkedIn: </strong
           ><a
             class="footer__link"
-            href="https://www.linkedin.com/in/pamela-e-glickman/"
+            href="https://www.linkedin.com/in/pamela-heystek/"
             target="_blank"
-            >www.linkedin.com/in/pamela-e-glickman/</a
+            >www.linkedin.com/in/pamela-heystek/</a
           >
         </span>
         <span class="footer__detail">
