Added tech skills section

--- a/index.html
+++ b/index.html
@@ -29,34 +29,52 @@
     </header>
 
     <main class="summary">
-      <section class="summary__section">
-        <h2 class="summary__heading">About Me</h2>
+      <div class="summary__container">
+        <section class="summary__section">
+          <h2 class="summary__heading">About Me</h2>
 
-        <p class="summary__para">
-          I'm a Junior Software Engineer, who graduated from General Assembly’s
-          Software Engineering Immersive course in 2021 and has two years of
-          professional experience having worked for Livewire Markets from May
-          2021 to March 2023.
-        </p>
+          <p class="summary__para">
+            I'm a Junior Software Engineer, who graduated from General
+            Assembly’s Software Engineering Immersive course in 2021 and has two
+            years of professional experience having worked for Livewire Markets
+            from May 2021 to March 2023.
+          </p>
 
-        <p class="summary__para">
-          I’m intelligent, humble, hard-working and eager to learn. I always
-          strive to write neat, efficient, readable code. You can rely on me to
-          spot coding errors from a mile away and not lose my cool when things
-          go wrong, as they often do in the tech world, though my partner tells
-          me I have a soft side too.
-        </p>
+          <p class="summary__para">
+            I’m intelligent, humble, hard-working and eager to learn. I always
+            strive to write neat, efficient, readable code. You can rely on me
+            to spot coding errors from a mile away and not lose my cool when
+            things go wrong, as they often do in the tech world, though my
+            partner tells me I have a soft side too.
+          </p>
 
-        <p class="summary__para summary__para--link-container">
-          <a
-            class="summary__link"
-            href="./assets/images/Pamela_Heystek_Resume.pdf"
-            target="_blank"
-            download
-            >Click Here to Download my Resume</a
-          >
-        </p>
-      </section>
+          <p class="summary__para summary__para--link-container">
+            <a
+              class="summary__link"
+              href="./assets/images/Pamela_Heystek_Resume.pdf"
+              target="_blank"
+              download
+              >Click Here to Download my Resume</a
+            >
+          </p>
+        </section>
+
+        <section class="summary__section">
+          <h2 class="summary__heading">My Skills</h2>
+
+          <ul class="summary__list">
+            <li class="summary__item">HTML</li>
+            <li class="summary__item">CSS / SCSS</li>
+            <li class="summary__item">JavaScript</li>
+            <li class="summary__item">TypeScript.js</li>
+            <li class="summary__item">React.js</li>
+            <li class="summary__item">Ruby on Rails</li>
+            <li class="summary__item">PostgreSQL</li>
+            <li class="summary__item">Basic Unix Commands</li>
+            <li class="summary__item">Git Version Control</li>
+          </ul>
+        </section>
+      </div>
 
       <img
         class="summary__image"
