--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
               href="./assets/images/Pamela_Heystek_Resume.pdf"
               target="_blank"
               download
-              >Click Here to Download my Resume</a
             >
+              Click Here to Download my Resume
+            </a>
           </p>
         </section>
 
@@ -92,17 +93,19 @@
             class="footer__link"
             href="mailto:pamela.e.heystek@gmail.com"
             target="_blank"
-            >pamela.e.heystek@gmail.com</a
           >
+            pamela.e.heystek@gmail.com
+          </a>
         </span>
         <span class="footer__detail">
-          <strong>LinkedIn: </strong
-          ><a
+          <strong>LinkedIn: </strong>
+          <a
             class="footer__link"
             href="https://www.linkedin.com/in/pamela-heystek/"
             target="_blank"
-            >www.linkedin.com/in/pamela-heystek/</a
           >
+            https://www.linkedin.com/in/pamela-heystek/
+          </a>
         </span>
         <span class="footer__detail">
           <strong>GitHub: </strong>
@@ -110,8 +113,9 @@
             class="footer__link"
             href="https://github.com/PegliOne"
             target="_blank"
-            >https://github.com/PegliOne</a
           >
+            https://github.com/PegliOne
+          </a>
         </span>
       </div>
     </footer>
