Removes unnecessary comma

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <h2 class="summary__heading">About Me</h2>
 
           <p class="summary__para">
-            I'm a Junior Software Engineer, who graduated from General
-            Assembly’s Software Engineering Immersive course in 2021 and has two
-            years of professional experience having worked for Livewire Markets
-            from May 2021 to March 2023.
+            I'm a Junior Software Engineer who graduated from General Assembly’s
+            Software Engineering Immersive course in 2021 and has two years of
+            professional experience having worked for Livewire Markets from May
+            2021 to March 2023.
           </p>
 
           <p class="summary__para">
