Adds GitHub icon styles

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
           </a>
         </span>
         <span class="footer__detail">
-          GitHub <i class="footer__icon fa-brands fa-github"></i> :
+          GitHub
+          <i class="footer__icon footer__icon--rounded fa-brands fa-github"></i>
+          :
           <a
             class="footer__link"
             href="https://github.com/PegliOne"
