Adds more projects

--- a/projects.html
+++ b/projects.html
@@ -70,9 +70,69 @@
             </a>
           </p>
         </div>
-        <div class="projects__project"></div>
-        <div class="projects__project"></div>
-        <div class="projects__project"></div>
+        <div class="projects__project">
+          <h3 class="project__heading">FakeOS: Windows 98</h3>
+          <a class="project__image-container"
+            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
+            target="_blank"
+          >
+            <img class="project__image" src="./assets/images/fake-os.png" />
+          </a>
+          <p class="project__para">
+            A fake operating system created using HTML, SCSS and JavaScript.
+          </p>
+          <p class="project__para project__para--link-container">
+            <a 
+              class="project__link"
+              href="https://github.com/PegliOne/FakeOS-Windows-98"
+              target="_blank"
+            >
+              Click Here To See The GitHub Repo
+            </a>
+          </p>
+        </div>
+        <div class="projects__project">
+          <h3 class="project__heading">Google Books API Search Engine</h3>
+          <a class="project__image-container"
+            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
+            target="_blank"
+          >
+            <img class="project__image" src="./assets/images/google-books.png" />
+          </a>
+          <p class="project__para">
+            A search engine for the Google Books API built using SCSS and React.js. Features include modals to display additional book details.
+          </p>
+          <p class="project__para project__para--link-container">
+            <a 
+              class="project__link"
+              href="https://github.com/PegliOne/Google-Books-API-Search-Engine"
+              target="_blank"
+            >
+              Click Here To See The GitHub Repo
+            </a>
+          </p>
+        </div>
+        <div class="projects__project">
+          <h3 class="project__heading">React eShop</h3>
+          <a class="project__image-container"
+            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
+            target="_blank"
+          >
+            <img class="project__image" src="./assets/images/react-e-shop.png" />
+          </a>
+          <p class="project__para">
+            A mock e-commerce app for retro videogames built using SCSS React.js and a Firestore database. Features include a product carousel, a product grid, product order forms and a cart.
+          </p>
+          <p class="project__para project__para--link-container">
+            <a 
+              class="project__link"
+              href="https://github.com/PegliOne/React-E-Shop"
+              target="_blank"
+            >
+              Click Here To See The GitHub Repo
+            </a>
+          </p>
+        </div>
       </div>
     </main>
 
